--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -50,6 +50,7 @@
                 fetch(`/api/meeting/${meetingId}`)
                     .then(response => response.json())
                     .then(meeting => {
+                        // TODO : 추후 제거
                         console.log(meeting)
 
                         const startAt = new Date(meeting.startAt)
@@ -72,6 +73,8 @@
                                     ${makeBody("주소", meeting.primaryAddress)}
                                     ${makeBody("장소명", meeting.placeName)}
                                     ${makeBody("날짜", formattedStartAt)}
+                                    <div class="text-white font-weight-bold"
+                                        style="opacity: 0.8;"> 참여 인원 ( ${meeting.numOfParticipants} / ${meeting.capacity} )  </div>
                                 </div>
                                 <button class="btn btn-primary btn-xl"
                                             style="height: 50px; padding: 10px 36px 10px 36px;"
@@ -99,6 +102,7 @@
                     fetch(`/api/meeting/${meetingId}/participant`)
                         .then(response => response.json())
                         .then(members => {
+                            // TODO : 추후 제거
                             console.log(members)
                             const participantsCount = members.length
 
@@ -107,7 +111,7 @@
                                 color: white;
                                 font-size: larger;
                                 opacity: 0.7;'
-                                class="participantTitle">전체참여 목록 (${participantsCount}/${capacity}명)</div>`
+                                class="participantTitle">전체참여 목록</div>`
 
                             const meetingDateTitle =
                                 `<div class="text-white font-weight-bold"
@@ -119,7 +123,7 @@
 
                             members.forEach(member => {
                                 const participants =
-                                    `<div name="participant" style="margin: 10px 0px;" value="${member.memberId}">
+                                    `<div name="participant" style="margin: 10px 10px;" value="${member.memberId}">
                                         <div class="text-white font-weight-bold">${member.name}</div>
                                         <div class="text-white font-weight-bold" style="opacity: 0.7;">${member.introduce}</div>
                                     </div>`
