--- a/moinda-api/src/main/resources/templates/meeting/meetings.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetings.html
@@ -64,9 +64,6 @@
                         alert(error)
                     });
 
-                // Function
-                const makeBody = (text, ...data) => `<div class="text-white font-weight-bold"> ${text} : ${data.join(" ")} </div>`
-
                 const participate = meetingId => {
 
                     const participateMeetingRequestDto = {
@@ -103,10 +100,14 @@
                     }
                 }
 
+                const makeBody = (text, ...data) => `<div class="text-white font-weight-bold"> ${text} : ${data.join(" ")} </div>`
 
                 const makeMeetingsComponent = (component, meetings) => {
 
+                    console.log(meetings)
+
                     meetings.forEach(meeting => {
+
                         const startAt = new Date(meeting.startAt)
                         const daysOfWeek = ['일', '월', '화', '수', '목', '금', '토'];
                         const dayOfWeek = daysOfWeek[startAt.getDay()];
@@ -127,6 +128,8 @@
                                         ${makeBody("주소", meeting.primaryAddress)}
                                         ${makeBody("장소명", meeting.placeName)}
                                         ${makeBody("날짜", formattedStartAt)}
+                                        <div class="text-white font-weight-bold"
+                                        style="opacity: 0.8;"> 참여 인원 ( ${meeting.numOfParticipants} / ${meeting.capacity} )  </div>
                                     </div>
                                     <button class="btn btn-primary btn-xl"
                                     style="height: 50px; padding: 10px 36px 10px 36px;"
