--- a/moinda-api/src/main/resources/templates/login.html
+++ b/moinda-api/src/main/resources/templates/login.html
@@ -42,7 +42,7 @@
         </header>
 
         <script th:inline="javascript">
-
+            // CryptoJS를 가져와서 사용하는 방향으로 한다.
             window.onload = () => {
                 const loginButton = document.querySelector("#loginButton")
                 const signUpButton = document.querySelector("#signUpButton")
