[#80] refactor: arrange HTML

--- a/moinda-api/src/main/resources/templates/index.html
+++ b/moinda-api/src/main/resources/templates/index.html
@@ -17,7 +17,7 @@
                         </th:block>
                         <th:block th:if="${session.session == null}">
                             <h3 class="text-white font-weight-bold">
-                                안녕하세요, 코딩 할 시간입니다.
+                                모각코 할 시간입니다.
                             </h3>
                             <hr class="divider" />
                         </th:block>
