--- a/moinda-api/src/main/resources/templates/signup.html
+++ b/moinda-api/src/main/resources/templates/signup.html
@@ -18,27 +18,27 @@
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="Enter your email..." data-sb-validations="required" />
+                                <input class="form-control" id="email" type="email" placeholder="Enter your email..." />
                                 <label for="email">Email</label>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="name" type="text" placeholder="name@example.com" data-sb-validations="required,email" />
-                                <label for="name">Name</label>
+                                <input class="form-control" id="name" type="text" placeholder="nickname" />
+                                <label for="name">Nickname</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="password" type="password" placeholder="name@example.com" data-sb-validations="required,email,name" />
+                                <input class="form-control" id="password" type="password" placeholder="8자 이상을 권장합니다." />
                                 <label for="password">Password</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
                             </div>
 
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="introduce" type="text" placeholder="name@example.com" data-sb-validations="required,email" />
+                                <input class="form-control" id="introduce" type="text" placeholder="안녕하세요?" />
                                 <label for="introduce">introduce</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
