--- a/moinda-api/src/main/resources/templates/login.html
+++ b/moinda-api/src/main/resources/templates/login.html
@@ -18,13 +18,13 @@
                         <form id="contactForm" data-sb-form-api-token="API_TOKEN">
                             <!-- Name input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="email" type="email" placeholder="Enter your email..." data-sb-validations="required" />
+                                <input class="form-control" id="email" type="email" placeholder="Enter your email..." />
                                 <label for="email">Email</label>
                                 <div class="invalid-feedback" data-sb-feedback="name:required">A name is required.</div>
                             </div>
                             <!-- Email address input-->
                             <div class="form-floating mb-3">
-                                <input class="form-control" id="password" type="password" placeholder="name@example.com" data-sb-validations="required,email" />
+                                <input class="form-control" id="password" type="password" placeholder="8자 이상을 권장합니다." />
                                 <label for="password">Password</label>
                                 <div class="invalid-feedback" data-sb-feedback="email:required">An email is required.</div>
                                 <div class="invalid-feedback" data-sb-feedback="email:email">Email is not valid.</div>
