--- a/moinda-api/src/main/resources/templates/meeting/register.html
+++ b/moinda-api/src/main/resources/templates/meeting/register.html
@@ -14,7 +14,7 @@
                         <div class="option">
                             <div>
                                 <form onsubmit="searchPlaces(); return false;">
-                                    키워드 : <input style="padding-left: 5px" type="text" id="keyword" size="20" placeholder="키워드를 입력해주세요.">
+                                    키워드 : <input style="padding-left: 5px" type="text" id="keyword" size="20" placeholder="장소를 입력해주세요.">
                                     <button id="search" style="border: solid 1px gray;" type="submit">검색하기</button>
                                 </form>
                             </div>
