--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -123,9 +123,18 @@
 
                             members.forEach(member => {
                                 const participants =
-                                    `<div name="participant" style="margin: 10px 10px;" value="${member.memberId}">
-                                        <div class="text-white font-weight-bold">${member.name}</div>
-                                        <div class="text-white font-weight-bold" style="opacity: 0.7;">${member.introduce}</div>
+                                    `<div name="participant"
+                                        style="margin: 10px 5px;
+                                                display: flex;
+                                                align-items: center;"
+                                        value="${member.memberId}">
+                                        <div style="align-self: center;" name="userImg">
+                                            <img src="/img/user/anonymous.png" style="max-width: 50px;" >
+                                        </div>
+                                        <div style="padding: 3px;" name="userDetail">
+                                            <div class="text-white font-weight-bold">${member.name}</div>
+                                            <div class="text-white font-weight-bold" style="opacity: 0.7;">${member.introduce}</div>
+                                        </div>
                                     </div>`
 
                                 component.innerHTML += participants
