--- a/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
+++ b/moinda-api/src/main/resources/templates/meeting/meetingDetail.html
@@ -31,19 +31,15 @@
 
             window.onload = () => {
 
-                // const session = [[${session.session}]]
-                //
-                // if(!session) {
-                //     alert("세션이 만료되어 다시 로그인을 해주세요.")
-                //     location.href = "/login"
-                // }
+                const session = [[${session.session}]]
+                console.log(session)
 
                 const meetingDetailDiv = document.querySelector(".meeting")
                 const participantsDiv = document.querySelector(".participants")
-                let capacity = 0;
-                var parts = window.location.pathname.split('/');
-                var meetingId = parts[parts.length - 1];
 
+                const parts = window.location.pathname.split('/');
+                const meetingId = parts[parts.length - 1];
+                // NOTE : 모임 상세 & 참여자 목록에 쓰기 위해 전역으로 선언헀음,
                 let formattedStartAt = "";
 
                 // REST API 호출 및 응답 처리
@@ -77,16 +73,24 @@
                                         style="opacity: 0.8;"> 참여 인원 ( ${meeting.numOfParticipants} / ${meeting.capacity} )  </div>
                                 </div>
                                 <button class="btn btn-primary btn-xl"
-                                            style="height: 50px; padding: 10px 36px 10px 36px;"
-                                            type="button" name='participate'> 참가하기 </button>
-<!--                                <button class="btn btn-primary btn-xl"-->
-<!--                                            style="height: 50px; padding: 10px 36px 10px 36px;"-->
-<!--                                            type="button" name='leave'> 참가취소 </button>-->
+                                            style="height: 50px;
+                                                    padding: 10px 36px 10px 36px;
+                                                    display: none;"
+                                            type="button" id='participate'> 참가하기 </button>
+                                <button class="btn btn-primary btn-xl"
+                                            style="height: 50px;
+                                                    padding: 10px 36px 10px 36px;
+                                                    display: none;"
+                                            type="button" id='leave'> 참가취소 </button>
                         </div>
                          `
-                        capacity = meeting.capacity
                         meetingDetailDiv.innerHTML += body
 
+                        // 사용자에 따라 버튼을 활성화
+                        activeRenderingButton(session)
+                        // 각 버튼의 이벤트 추가
+                        makeParticipateButtonEvent()
+                        makeLeaveButtonEvent()
                         // 현재 모임의 참여자 목록 생성
                         makeParticipants(participantsDiv, meetingId)
                     })
@@ -96,6 +100,95 @@
 
                 // Function
                 const makeBody = (text, ...data) => `<div class="text-white font-weight-bold"> ${text} : ${data.join(" ")} </div>`
+
+                const activeRenderingButton = (session) => {
+
+                    const participateBtn = document.querySelector("#participate")
+                    const leaveBtn = document.querySelector("#leave")
+
+                    // 사용자가 없을때는 아무것도 보이지 않게 한다.
+                    if(!session) {
+                        return;
+                    }
+
+                    fetch(`/api/member/${session.memberId}`)
+                        .then(response => response.json())
+                        .then(member => {
+                            console.log(member)
+
+                            let participatingMeetingId = member.participatingMeetingId;
+
+                            if(participatingMeetingId === parseInt(meetingId)) {
+                                displayButton(leaveBtn)
+                            } else {
+                                displayButton(participateBtn)
+                            }
+                        })
+                }
+
+                const displayButton = (button) => {
+                    button.style.display = "block"
+                }
+
+                const makeParticipateButtonEvent = () => {
+                    const participateButton = document.querySelector("#participate")
+                    participateButton.addEventListener("click", () => participate(meetingId))
+                }
+
+                const participate = meetingId => {
+
+                    const participateMeetingRequestDto = {
+                        "meetingId": meetingId,
+                        "memberId": session.memberId,
+                    }
+
+                    callRestApi(participateEvent, "POST", "/api/meeting/participate", participateMeetingRequestDto)
+                }
+
+                function participateEvent() {
+                    try {
+                        if (httpRequest.readyState === XMLHttpRequest.DONE) {
+                            if (httpRequest.status === 200) {
+                                alert("모임 참가에 성공했습니다.")
+                                window.location.reload()
+                            } else {
+                                alert(httpRequest.response);
+                                return;
+                            }
+                        }
+                    } catch (e) {
+                        alert(`요청에 실패했습니다. 서버에 문의해주세요.`);
+                    }
+                }
+
+                const makeLeaveButtonEvent = () => {
+                    const leaveButton = document.querySelector("#leave")
+                    leaveButton.addEventListener("click", leave)
+                }
+
+                const leave = () => {
+                    const leaveRequestDto = {
+                        "memberId" : session.memberId,
+                    }
+
+                    callRestApi(leaveEvent, "POST", "/api/meeting/leave", leaveRequestDto)
+                }
+
+                function leaveEvent() {
+                    try {
+                        if (httpRequest.readyState === XMLHttpRequest.DONE) {
+                            if (httpRequest.status === 200) {
+                                alert("모임 참가에 성공했습니다.")
+                                window.location.reload()
+                            } else {
+                                alert(httpRequest.response);
+                                return;
+                            }
+                        }
+                    } catch (e) {
+                        alert(`요청에 실패했습니다. 서버에 문의해주세요.`);
+                    }
+                }
 
                 const makeParticipants = (component, meetingId) => {
 
@@ -132,6 +225,7 @@
                                             <img src="/img/user/anonymous.png" style="max-width: 50px;" >
                                         </div>
                                         <div style="padding: 3px;" name="userDetail">
+                                            <!-- TODO : 본인일 경우 표시를 할 수 도 있다.-->
                                             <div class="text-white font-weight-bold">${member.name}</div>
                                             <div class="text-white font-weight-bold" style="opacity: 0.7;">${member.introduce}</div>
                                         </div>
